# telegram-acp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/telegram_acp/: __init__.py  agent.py  bridge.py  cli.py  config.py
tests/: test_bridge_agent.py
