[project]
name = "telegram-acp"
version = "0.1.0"
description = "ACP bridge for a Telegram userbot backed chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.10.1",
    "kurigram>=2.2.23",
    "python-dotenv>=1.2.2",
    "tgcrypto>=1.2.5",
]

[project.scripts]
telegram-acp = "telegram_acp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_acp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.uv]
package = true
